fix design on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
-html,
-body {
+html {
   margin: 0;
   height: 100%;
+}
+
+body {
+  min-height: 100%;
 }
 
 body {
